Fixed FlappyBat splash screen being too small in Games.html. Also corrected small CSS issue

--- a/Games.css
+++ b/Games.css
@@ -46,8 +46,8 @@ li{
 .parallax-background{
     height: 900px;
     width: 100%;
-    background-repeat:no-repeat;
-    margin 0;
+    background-repeat: no-repeat;
+    margin: 0;
 }
 
 .FlappyBat{
