--- a/Projects.css
+++ b/Projects.css
@@ -35,7 +35,7 @@ li{
     height: 900px;
     width: 100%;
     background-repeat:no-repeat;
-    margin 0;
+    margin: 0;
 }
 .motionDetection{
     background-image:  linear-gradient(
